# Napoleonic-Wargames-Project

./: .gitignore  CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md  index.html  map-style.json  rust-toolchain.toml  vercel.json
.github/workflows/: build-windows.yml  ci.yml
assets/: index-DJ2IfbSg.js
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client-desktop/: Cargo.toml
crates/client-desktop/src/: app_state.rs  main.rs
crates/client-shared/: Cargo.toml
crates/client-shared/src/: lib.rs  locale.rs
crates/client-web/: Cargo.toml
crates/client-web/src/: lib.rs
crates/core/: Cargo.toml
crates/core-rng/: Cargo.toml
crates/core-rng/src/: lib.rs
crates/core-schema/: Cargo.toml
crates/core-schema/src/: canonical.rs  combat_types.rs  events.rs  ids.rs  lib.rs  naval_types.rs  scenario.rs  supply_types.rs  tables.rs
crates/core-validate/: Cargo.toml
crates/core-validate/src/: lib.rs
crates/core/src/: clock.rs  combat.rs  diplomacy.rs  division.rs  economy.rs  events.rs  focuses.rs  frontlines.rs  lib.rs  loader.rs  map.rs  marshals.rs  minors.rs  mod_loader.rs  movement.rs  naval.rs  orders.rs  political.rs  politics.rs  production.rs  projection.rs  replay.rs  supply.rs  turn_loop.rs  validate.rs
crates/core/tests/: load_1805.rs
crates/netcode/: Cargo.toml
crates/netcode/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
data/ai/personalities/: default.json
data/scenarios/1805_standard/: scenario.json
data/schemas/: attrition.schema.json  combat.schema.json  economy.schema.json  leader_casualty.schema.json  minor_activation.schema.json  morale.schema.json  naval_combat.schema.json  pp_modifiers.schema.json  scenario.schema.json  weather.schema.json
data/tables/: attrition.json  combat.json  leader_casualty.json  minors.json  morale.json  naval_combat.json  weather.json
docs/: ARCHITECTURE.md  PROMPT.md  RELEASE_CHECKLIST.md  SPEC.md  adjudications.md  decisions.md  deps.md  ideas.md  questions.md
docs/phase-reports/: phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md
docs/rules/: README.md  ai.md  combat.md  diplomacy.md  economy.md  minors.md  modding.md  movement.md  naval.md  pbem.md  political.md  replay.md  server.md  supply.md  turn_loop.md  ui_desktop.md  ui_web.md
locales/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  pl.yaml  ru.yaml  zz.yaml
mods/: .gitkeep
mods/example_mod/: mod.json
mods/example_mod/tables/: economy.json
reference/prototype/: README.md  app.js  data.js  styles.css
testdata/rules_cases/movement/: README.md  case_c04_placeholder_required.yaml  case_h03_full_line.yaml  case_h07_diamond_lex_tiebreak.yaml  case_v06_forced_march_extends.yaml  case_v07_stacking_limit.yaml  case_v08_interception_pending.yaml
tools/asset-pipeline/: Cargo.toml
tools/asset-pipeline/src/: main.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
web/: index.html  package-lock.json  package.json
web/public/: area-centers.json  game-territories.geojson
web/src/: App.tsx  GameMap.tsx  MapData.ts  MapView.tsx  types.ts
web/src/components/: AreaPolygon.tsx  BattleScreen.tsx  ClockPanel.tsx  DivisionDesigner.tsx  EconomyPanel.tsx  EventPopup.tsx  FocusTree.tsx  MarshalsPanel.tsx  MiniMap.tsx  OrderPanel.tsx  PoliticsPanel.tsx  TerritoryPanel.tsx
web/src/hooks/: useOrders.ts
