[package]
name = "gc1805-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Headless runner for tests, PBEM coordination, and AI-vs-AI soaks."

[[bin]]
name = "gc1805"
path = "src/main.rs"

[lints]
workspace = true
