[package]
name = "gc1805-client-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Desktop client (Bevy).  Full implementation: Phase 14 per PROMPT.md §16.15."

[[bin]]
name = "gc1805-client-desktop"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_asset", "bevy_state", "x11"] }
gc1805-core-schema = { path = "../core-schema" }
gc1805-core = { path = "../core" }
serde_json = "1"
