[package]
name = "gc1805-client-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Web client (Rust→WASM core, TS/React shell lives under /web)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gc1805-core = { path = "../core" }
gc1805-core-schema = { path = "../core-schema" }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[lints]
workspace = true
