[package]
name = "gc1805-core-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Typed data schemas (scenarios, tables, events). See PROMPT.md §5."

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
schemars    = { workspace = true }
indexmap    = { workspace = true }
thiserror   = { workspace = true }
blake3      = { workspace = true }

[lints]
workspace = true
