[package]
name = "gc1805-core-validate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Order validators. Rejected orders never enter the event log (§2.4)."

[dependencies]
gc1805-core        = { path = "../core" }
gc1805-core-schema = { path = "../core-schema" }
thiserror = { workspace = true }

[lints]
workspace = true
