[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Build automation (asset pipeline drivers, release helpers)."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
gc1805-core-schema = { path = "../../crates/core-schema" }
schemars   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
